style.css
.menu ul, .menu li {
  list-style: none;
  margin: 0;
  padding: 0;
}

.menu ul {
  position: relative;
  z-index: 597;
}

.menu ul li {
  float: left;
}

.menu ul li:hover {
  position: relative;
  z-index: 599;
  cursor: default;
}

.menu ul ul {
  visibility: hidden;
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 598;
  width: 100%;
}

.menu ul ul li {
  float: none;
}

.menu ul ul ul {
  top: 0;
  left: auto;
  right: -99.5%;
}

.menu ul li:hover>ul {
  visibility: visible;
}

.menu ul ul {
  bottom: 0;
  left: 0;
}

.menu ul ul {
  margin-top: 0;
}

.menu ul ul li {
  font-weight: normal;
}

.menu a {
  display: block;
  line-height: 1em;
  text-decoration: none;
}

.menu {
  background: #333;
  border-bottom: 4px solid #1b9bff;
  font-family: 'Oxygen Mono', Tahoma, Arial, sans-serif;
  font-size: 12px;
}

.menu>ul {
  *display: inline-block;
}

.menu:after,
.menu ul:after {
  content: '';
  display: block;
  clear: both;
}

.menu a {
  background: #333;
  color: #CBCBCB;
  padding: 0 20px;
}

.menu ul {
  text-transform: uppercase;
}

.menu ul ul {
  border-top: 4px solid #1b9bff;
  text-transform: none;
  min-width: 190px;
}

.menu ul ul a {
  background: #1b9bff;
  color: #FFF;
  border: 1px solid #0082e7;
  border-top: 0 none;
  line-height: 150%;
  padding: 16px 20px;
}

.menu ul ul li a.bubbleitem {
  background: #ff1b1b;
  border: 1px solid #e70000;
}

.menu ul ul ul {
  border-top: 0 none;
}

.menu ul ul li {
  position: relative
}
.menu>ul>li>a {
  line-height: 48px;
}

.menu ul ul li:hover>a {
  background: #35a6ff;
}

.menu ul ul li.bubbleitem:hover>a {
  background: #ff6435;
}

.menu ul ul li a.bubbleitem:hover {
  background: #ff6435;
}

.menu ul ul li:last-child>a {
  border-radius: 0 0 3px 3px;
  box-shadow: 0 1px 0 #1b9bff;
}

.menu ul ul li:last-child:hover>a {
  border-radius: 0 0 0 3px;
}

.menu ul ul li.has-sub>a:after {
  content: '>';
  position: absolute;
  top: 50%;
  right: 15px;
  margin-top: -8px;
}

.menu ul li:hover>a, .menu ul li.active>a {
  background: #1b9bff;
  color: #FFF;
}

.menu ul li.has-sub>a:after {
  content: '+';
  margin-left: 5px;
}

.menu ul li.last ul {
  left: auto;
  right: 0;
}

.menu ul li.last ul ul {
  left: auto;
  right: 99.5%;
}

#itemSelected {
  position: absolute;
  top: 35%;
  left: 48%;
  border-bottom: 0 none;
  box-shadow: 0 1px 5px rgba(179, 130, 130, 0.46);
  width: 130px;
  font-size: 20pt;
  padding: 5px;
  background-color: white;
}

#bubble {
  position: absolute;
  border-radius: 50%;
  background-color: green;
  z-index: 10;
  pointer-events: none;
}

